--- a/sass/components/_overlay-popup.scss
+++ b/sass/components/_overlay-popup.scss
@@ -1,6 +1,6 @@
 .overlay-popup {
-  min-width: 100vw;
-  min-height: 100vh;
+  width: 100vw;
+  height: 100vh;
   position: fixed;
   top: 0;
   left: 0;
